--- a/Basic Video Chat/index.html
+++ b/Basic Video Chat/index.html
@@ -25,6 +25,7 @@
 
     <script type="text/javascript" src="js/config.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript" src="js/adapter.js"></script>
 </body>
 
 </html>
